--- a/docs/04-Abendkasse/01-intro.mdx
+++ b/docs/04-Abendkasse/01-intro.mdx
@@ -6,14 +6,14 @@ Dein-Ticket.Shop verfügt über Funktionen für das Betreiben einer oder mehrere
 
 Es gibt zwei Möglichkeiten, eine Abendkasse zu betreiben:
 
-1. Mit Kartenzahlung:\
+1. **Mit Kartenzahlung**:
    Dafür ist aus fiskalisierungsrechtlichen Gründen (Stichwort TSE, KassenSichV und DSFinV-K) zwingend ein Dein-Ticket.Shop Abendkassensystem erforderlich. Dieses können wir nach Absprache gerne bereitstellen.
-2. **Nur Barzahlung:**\
+2. **Nur Barzahlung:**
    Hierfür kann der eigene Laptop / Tablet verwendet werden (es wird nur Windows und MacOS unterstützt). Zusätzlich ist ein Bondrucker erforderlich. Diesen können wir in der Regel bereitstellen, ansonsten kontaktieren Sie uns für passende Modelle.
 
 Folgen Sie der Anleitung für einen reibungslosen Start:
 
-1. [Anlegen der Abendkasse im Backend](https://docs.dein-ticket.shop/docs/anlegen-im-backend "Anlegen der Abendkasse im Backend")
+1. [Anlegen der Abendkasse im Backend](./backend-setup)
 2. Aufbau und Konfiguration des Systems
    1. Mit Kartenzahlung (benötigt Dein-Ticket.Shop Abendkassensystem)
    2. Nur Barzahlung (auch mit eigenem Laptop + Bondrucker möglich)
