feat: boxoffice docs

--- a/docs/04-Abendkasse/03-setup.mdx
+++ b/docs/04-Abendkasse/03-setup.mdx
@@ -20,6 +20,9 @@ title: Aufbau und Konfiguration
 ## Einrichtung
 6. Verbinden Sie das Tablet mit dem richtigen WLAN-Netzwerk. Dazu haben Sie zwei Möglichkeiten:
     1. Im Hauptmenü klicken Sie auf "WLAN" und anschließend in der Zeile des richtigen Netzwerks auf "Verbinden". Geben Sie das Passwort ein und warten Sie auf die Bestätigung. Kehren Sie über den Pfeil nach links (oben) ins Hauptmenü zurück.
+    :::caution Probleme mit Umlauten oder Sonderzeichen in WLAN-SSIDs
+    Aktuell gibt es bei dieser Methode Probleme mit Umlauten oder Sonderzeichen in WLAN-SSIDs. Falls Sie ein solches WLAN nutzen, folgen Sie lieber der folgenden Methode (ii.)
+    :::
     2. Unten rechts in der Windows-Taskleiste klicken Sie auf das WLAN-Symbol. Wählen Sie das richtige Netzwerk aus und geben Sie das Passwort ein. Warten Sie auf die Bestätigung.
 7. Melden Sie sich an, entweder mit einem QR Code oder mit Zugangsdaten:
     1. **Mit QR Code**: Klicken Sie auf *mit QR Code*. Warten Sie, bis die Kamera erscheint und halten Sie den QR Code (auf der Anleitung, siehe [hier](./backend-setup) für mehr Infos) vor die Kamera. Warten Sie, bis Sie angemeldet sind.
