fix: missing links

--- a/docs/04-Abendkasse/01-intro.mdx
+++ b/docs/04-Abendkasse/01-intro.mdx
@@ -14,8 +14,9 @@ Es gibt zwei Möglichkeiten, eine Abendkasse zu betreiben:
 Folgen Sie der Anleitung für einen reibungslosen Start:
 
 1. [Anlegen der Abendkasse im Backend](./backend-setup)
-2. Aufbau und Konfiguration des Systems
+2. [Aufbau und Konfiguration des Systems](./setup)
    1. Mit Kartenzahlung (benötigt Dein-Ticket.Shop Abendkassensystem)
    2. Nur Barzahlung (auch mit eigenem Laptop + Bondrucker möglich)
-3. Verkauf von Karten
-4. Nach dem Verkauf
+3. [Verkauf von Karten](./sale)
+4. [Scannen von Tickets / PDAs](./pda)
+5. [Nach der Veranstaltung](./after-event)
