--- a/docs/03-Einrichtung/Zahlunsmethoden/02-klarna.mdx
+++ b/docs/03-Einrichtung/Zahlunsmethoden/02-klarna.mdx
@@ -4,7 +4,7 @@ title: Klarna
 
 Um Klarna Zahlungen zu akzeptieren, müssen Sie Zugriff anfordern. Dies ist einfach und schnell erledigt:
 
-1. Besichen Sie die Stripe-Seite für manuelle Zahlungseinstellungen: [https://dashboard.stripe.com/settings/payments](https://dashboard.stripe.com/settings/payments). Eventuell müssen Sie sich anmelden.
+1. Besuchen Sie die Stripe-Seite für manuelle Zahlungseinstellungen: [https://dashboard.stripe.com/settings/payments](https://dashboard.stripe.com/settings/payments). Eventuell müssen Sie sich anmelden.
 2. Scrollen Sie nach unten zu *Klarna* und klicken Sie auf *Zugriff anfordern*.
 
  ![Klarna Zugriff anfordern](/img/docs/payment-methods/klarna/setup.png)
