fix: time spans

--- a/docs/06-Nach der Veranstaltung/01-payouts.mdx
+++ b/docs/06-Nach der Veranstaltung/01-payouts.mdx
@@ -27,7 +27,7 @@ Hier brauchen Sie nichts weiter zu tun als die Vorverkaufsstelle anzuweisen, zu 
 
 :::info Warum erhalte ich Einnahmen von VVK-Stellen erst später?
 Die maximale Wartezeit setzt sich folgendermaßen zusammen:
-- bis zu 7 Tage für die SEPA-Überweisung von der VVK-Stelle
+- bis zu 5 Werktage für die SEPA-Überweisung von der VVK-Stelle (durchschnittlich, im Einzelfall bis zu 14 Werktage)
 - bis zu 7 Tage als Wartezeit auf Stripe (siehe oben)
 - bis zu 3 Werktage für die Auszahlung von Stripe auf Ihr Konto
 
