fix: remove tablet link and price

--- a/docs/05-Abendkasse/08-equipment.mdx
+++ b/docs/05-Abendkasse/08-equipment.mdx
@@ -11,7 +11,7 @@ Die Preise entsprechen dem Stand vom 20.11.2023 und sind exklusive Mehrwertsteue
 ## Kassieren
 | Kategorie | Zweck | Gerät | Bemerkungen | Preis | Link |
 | --- | --- | --- | --- | --- | --- |
-| Tablet / Laptop | Zugriff auf die Abendkassensoftware | Microsoft Surface Go 3 oder vergleichbar | Generell funktioniert jeder Laptop oder jedes Tablet mit Windows 10 oder 11. Die einzige benötigte Software ist Google Chrome. | 378,14 € | [Link](https://amzn.eu/d/dVmfpqy) |
+| Tablet / Laptop | Zugriff auf die Abendkassensoftware | Microsoft Surface Go oder vergleichbar | Generell funktioniert jeder Laptop oder jedes Tablet mit Windows 10 oder 11. Die einzige benötigte Software ist Google Chrome. | | |
 
 ## Drucken von Tickets
 | Kategorie | Zweck | Gerät | Bemerkungen | Preis | Link |
