feat: add more images to boxoffice docs

--- a/docs/05-Abendkasse/03-setup.mdx
+++ b/docs/05-Abendkasse/03-setup.mdx
@@ -27,7 +27,8 @@ title: Aufbau und Konfiguration
 7. Melden Sie sich an, entweder mit einem QR Code oder mit Zugangsdaten:
     1. **Mit QR Code**: Klicken Sie auf *mit QR Code*. Warten Sie, bis die Kamera erscheint und halten Sie den QR Code (auf der Anleitung, siehe [hier](./backend-setup) für mehr Infos) vor die Kamera. Warten Sie, bis Sie angemeldet sind.
     2. **Mit Zugangsdaten**: Klicken Sie auf *mit Zugangsdaten*. Geben Sie die Zugangsdaten ein und warten Sie, bis Sie angemeldet sind.
-8. Wählen Sie die richtige Veranstaltung aus.
+8. Wählen Sie die richtige Veranstaltung aus:
+    ![Veranstaltung auswählen](/img/docs/boxoffice/event_selection.png)
 ### Kartenlesegerät
 9. **Schalten** Sie das **Kartenlesegerät** am Schalter an der Seite **ein**. Warten Sie, bis es hochgefahren ist.
 10. Konfigurieren Sie die WLAN-Verbindung des Kartenlesegeräts:
@@ -59,7 +60,8 @@ title: Aufbau und Konfiguration
 2. Versorgen Sie den **Bondrucker** mit dessen Netzteil über die Mehrfachsteckdose mit **Strom**. Wenn die Akkus der Geräte voll sind, können Sie die Netzteile auch wieder entfernen, es schadet aber nicht, sie angeschlossen zu lassen.
 3. **Schalten** Sie den **Bondrucker** am Schalter vorne rechts **ein**.
 4. **Starten** Sie Ihren **Laptop** und [Google Chrome](https://www.google.com/intl/de_de/chrome/). Geben Sie in die Adresszeile `[domain].vvk.dein-ticket.shop` ein und drücken Sie Enter. Ersetzen Sie hierbei `[domain]` durch die Domain, die Sie von uns erhalten haben. Diese steht auch auf dem Anleitungs-PDF. Melden Sie sich mit den Zugangsdaten an, die Sie auch auf dem PDF finden.
-5. Wählen Sie die richtige Veranstaltung aus.
+5. Wählen Sie die richtige Veranstaltung aus:
+    ![Veranstaltung auswählen](/img/docs/boxoffice/event_selection.png)
 ### Bondrucker Test
 6. Auf dem Tablet sehen Sie in der Menüleiste oben ein farbiges Kästchen mit dem Drucker-Symbol. Wenn Sie es anklicken, wird ein Testbeleg gedruckt. So können Sie sicherstellen, dass der Bondrucker richtig angeschlossen ist.
 
