--- a/docs/05-Abendkasse/04-sale.mdx
+++ b/docs/05-Abendkasse/04-sale.mdx
@@ -21,12 +21,20 @@ Die Statusleiste zeigt folgende Elemente:
 * **Abmelden**: Am Ende des Tages sollten Sie sich hier abmelden.
 
 ## Verkauf
-Auf der linken Bildschirmhälfte befindet sich der Saalplan oder, wenn der Veranstaltungsort eine nur freie Platzwahl bietet, Buttons für Tickets der verfügbaren Kategorien. Klicken Sie Plätze bzw. Buttons an, um sie in den Warenkorb (rechts) zu legen. Dort können Sie die Anzahl der Tickets ändern oder Tickets wieder entfernen. Auch Ermäßigungen können Sie hier hinzufügen.
+Auf der linken Bildschirmhälfte befindet sich der Saalplan oder, wenn der Veranstaltungsort eine nur freie Platzwahl bietet, Buttons für Tickets der verfügbaren Kategorien.
+![Verkauf](/img/docs/boxoffice/cart_empty.png)
+Klicken Sie Plätze bzw. Buttons an, um sie in den Warenkorb (rechts) zu legen. Dort können Sie die Anzahl der Tickets ändern oder Tickets wieder entfernen. Auch Ermäßigungen können Sie hier hinzufügen.
+![Verkauf](/img/docs/boxoffice/cart_full.png)
 
 ### Bezahlung
 Rechts unten können Sie zwischen Bar- und Kartenzahlung wählen.
 - Bei **Barzahlung**: Klicken Sie nach dem Kassieren auf **Fertig & Karten drucken**. Die Tickets und ein Kassenbeleg werden gedruckt.
+
+    ![Bezahlung](/img/docs/boxoffice/payment_method_cash.png)
+
 - Bei **Kartenzahlung**: Klicken Sie auf **Karte kassieren**. Wenn das Kartenterminal bereit ist und die Gesamtsumme angezeigt wird, lassen Sie den Kunden die Karte einstecken oder vorhalten. Nach erfolgreicher Zahlung werden die Karten und ein Beleg gedruckt. Falls die Zahlung fehlschlägt, haben Sie mithilfe der Buttons die Option, es erneut zu versuchen, den Kunden stattdessen bar zahlen zu lassen oder die Bestellung zu stornieren.
+
+    ![Bezahlung](/img/docs/boxoffice/payment_method_card.png)
 
 </TabItem>
 <TabItem value="Nur Barzahlung">
@@ -43,7 +51,10 @@ Die Statusleiste zeigt folgende Elemente:
 * **Abmelden**: Am Ende des Tages sollten Sie sich hier abmelden.
 
 ## Verkauf
-Auf der linken Bildschirmhälfte befindet sich der Saalplan oder, wenn der Veranstaltungsort eine nur freie Platzwahl bietet, Buttons für Tickets der verfügbaren Kategorien. Klicken Sie Plätze bzw. Buttons an, um sie in den Warenkorb (rechts) zu legen. Dort können Sie die Anzahl der Tickets ändern oder Tickets wieder entfernen. Auch Ermäßigungen können Sie hier hinzufügen.
+Auf der linken Bildschirmhälfte befindet sich der Saalplan oder, wenn der Veranstaltungsort eine nur freie Platzwahl bietet, Buttons für Tickets der verfügbaren Kategorien.
+![Verkauf](/img/docs/boxoffice/cart_empty.png)
+Klicken Sie Plätze bzw. Buttons an, um sie in den Warenkorb (rechts) zu legen. Dort können Sie die Anzahl der Tickets ändern oder Tickets wieder entfernen. Auch Ermäßigungen können Sie hier hinzufügen.
+![Verkauf](/img/docs/boxoffice/cart_full.png)
 
 ### Bezahlung
 Klicken Sie nach dem Abkassieren des Kunden auf **Fertig & Karten drucken**. Die Tickets und ein Kassenbeleg werden gedruckt.
@@ -53,6 +64,7 @@ Klicken Sie nach dem Abkassieren des Kunden auf **Fertig & Karten drucken**. Die
 
 ## Gästeliste
 Oben gibt es einen Button Gästeliste. Wenn im Backend Gäste angelegt wurden, finden sich diese hier. Wenn Sie auf **Auswählen** klicken, landen diese Plätze mit entsprechenden Ermäßigungen im Warenkorb.
+![Gästeliste](/img/docs/boxoffice/guest_list.png)
 
 :::caution
 Werden über die Gästeliste zum Warenkorb hinzugefügte Tickets wieder entfernt, tauchen diese nicht wieder in der Gästeliste auf!
