fix: relative links after refreshing page

--- a/docs/03-Einrichtung/Zahlunsmethoden/01-intro.mdx
+++ b/docs/03-Einrichtung/Zahlunsmethoden/01-intro.mdx
@@ -14,4 +14,4 @@ Manche Zahlungsmethoden (beispielsweise SEPA Lastschrift) funktionieren nicht in
 :::
 
 :::tip Einrichtung von Klarna
-Die Einrichtung von Klarna benötigt einen zusätzlichen Schritt. [Hier finden Sie eine Anleitung](./klarna).
+Die Einrichtung von Klarna benötigt einen zusätzlichen Schritt. [Hier finden Sie eine Anleitung](./02-klarna.mdx).
