--- a/docs/04-Vorverkauf/02-cancellations.mdx
+++ b/docs/04-Vorverkauf/02-cancellations.mdx
@@ -23,4 +23,4 @@ Bei einer Absage müssen Kunden der komplette Ticketpreis erstattet werden (vgl.
 3. Scrolle ganz nach unten und klicke auf *Veranstaltung absagen*. Bestätige die Sicherheitsabfrage.
 4. Fertig!
 
-Siehe auch: [Rückerstattungen bei VVK-Stellen](../Vorverkaufsstellen/refunds)
+Siehe auch: [Rückerstattungen bei VVK-Stellen](../07-Vorverkaufsstellen/02-refunds.mdx)
