--- a/docs/05-Abendkasse/03-setup.mdx
+++ b/docs/05-Abendkasse/03-setup.mdx
@@ -12,7 +12,7 @@ title: Aufbau und Konfiguration
     - Kartenlesegerät + Ladekabel + USB-Netzadapter
     - Ersatz-Papierrolle
     - 3er Mehrfachsteckdose
-    Eventuell liegt noch ein PDA (Smartphone-ähnliches Gerät zum Scannen von Tickets) bei. Siehe [PDA Anleitung](./pda) für weitere Informationen.
+    Eventuell liegt noch ein PDA (Smartphone-ähnliches Gerät zum Scannen von Tickets) bei. Siehe [PDA Anleitung](./05-pda.mdx) für weitere Informationen.
 2. Versorgen Sie das **Tablet** mit dessen Netzteil über die Mehrfachsteckdose mit **Strom**. Wiederholen Sie dies für den **Bondrucker** und das **Kartenlesegerät**. Wenn die Akkus der Geräte voll sind, können Sie die Netzteile auch wieder entfernen, es schadet aber nicht, sie angeschlossen zu lassen.
 3. Verbinden Sie den **Bondrucker** mit dem **USB-B Kabel** mit dem **Tablet**.
 4. **Schalten** Sie den **Bondrucker** am Schalter vorne rechts **ein**.
@@ -25,7 +25,7 @@ title: Aufbau und Konfiguration
     :::
     2. Unten rechts in der Windows-Taskleiste klicken Sie auf das WLAN-Symbol. Wählen Sie das richtige Netzwerk aus und geben Sie das Passwort ein. Warten Sie auf die Bestätigung.
 7. Melden Sie sich an, entweder mit einem QR Code oder mit Zugangsdaten:
-    1. **Mit QR Code**: Klicken Sie auf *mit QR Code*. Warten Sie, bis die Kamera erscheint und halten Sie den QR Code (auf der Anleitung, siehe [hier](./backend-setup) für mehr Infos) vor die Kamera. Warten Sie, bis Sie angemeldet sind.
+    1. **Mit QR Code**: Klicken Sie auf *mit QR Code*. Warten Sie, bis die Kamera erscheint und halten Sie den QR Code (auf der Anleitung, siehe [hier](./02-backend-setup.mdx) für mehr Infos) vor die Kamera. Warten Sie, bis Sie angemeldet sind.
     2. **Mit Zugangsdaten**: Klicken Sie auf *mit Zugangsdaten*. Geben Sie die Zugangsdaten ein und warten Sie, bis Sie angemeldet sind.
 8. Wählen Sie die richtige Veranstaltung aus:
     ![Veranstaltung auswählen](/img/docs/boxoffice/event_selection.png)
@@ -56,7 +56,7 @@ title: Aufbau und Konfiguration
     - Bondrucker + Netzteil + USB-Kabel
     - Ersatz-Papierrolle
     - 3er Mehrfachsteckdose
-    Eventuell liegt noch ein PDA (Smartphone-ähnliches Gerät zum Scannen von Tickets) bei. Siehe [PDA Anleitung](./pda) für weitere Informationen.
+    Eventuell liegt noch ein PDA (Smartphone-ähnliches Gerät zum Scannen von Tickets) bei. Siehe [PDA Anleitung](./05-pda.mdx) für weitere Informationen.
 2. Versorgen Sie den **Bondrucker** mit dessen Netzteil über die Mehrfachsteckdose mit **Strom**. Wenn die Akkus der Geräte voll sind, können Sie die Netzteile auch wieder entfernen, es schadet aber nicht, sie angeschlossen zu lassen.
 3. **Schalten** Sie den **Bondrucker** am Schalter vorne rechts **ein**.
 4. **Starten** Sie Ihren **Laptop** und [Google Chrome](https://www.google.com/intl/de_de/chrome/). Geben Sie in die Adresszeile `[domain].vvk.dein-ticket.shop` ein und drücken Sie Enter. Ersetzen Sie hierbei `[domain]` durch die Domain, die Sie von uns erhalten haben. Diese steht auch auf dem Anleitungs-PDF. Melden Sie sich mit den Zugangsdaten an, die Sie auch auf dem PDF finden.
