--- a/docs/06-Nach der Veranstaltung/01-payouts.mdx
+++ b/docs/06-Nach der Veranstaltung/01-payouts.mdx
@@ -23,7 +23,7 @@ Um Betrug zu verhindern und Risiken zu minimieren, müssen eingezahlte Beträge 
 5. Klicken Sie auf *Jetzt ... € auszahlen*. Der Betrag wird nun auf Ihr Konto überwiesen, das kann bis zu 3 Werktagen dauern. Die Belege für die Buchhaltung werden sofort erstellt und per E-Mail an Sie versendet.
 
 ## Auszahlung von Einnahmen von Vorverkaufsstellen
-Hier brauchen Sie nichts weiter zu tun als die Vorverkaufsstelle anzuweisen, zu bezahlen. Eine Anleitung dazu findet sich [hier](../Vorverkaufsstellen/payment). Wenn die VVK-Stelle bezahlt, werden die Belege automatisch an Sie verschickt und das Geld wird (eventuell bis zu 14 Tagen verzögert) auf Ihr Konto überwiesen.
+Hier brauchen Sie nichts weiter zu tun als die Vorverkaufsstelle anzuweisen, zu bezahlen. Eine Anleitung dazu findet sich [hier](../07-Vorverkaufsstellen/01-payment.mdx). Wenn die VVK-Stelle bezahlt, werden die Belege automatisch an Sie verschickt und das Geld wird (eventuell bis zu 14 Tagen verzögert) auf Ihr Konto überwiesen.
 
 :::info Warum erhalte ich Einnahmen von VVK-Stellen erst später?
 Die maximale Wartezeit setzt sich folgendermaßen zusammen:
