--- a/docs/05-Abendkasse/01-intro.mdx
+++ b/docs/05-Abendkasse/01-intro.mdx
@@ -13,10 +13,10 @@ Es gibt zwei Möglichkeiten, eine Abendkasse zu betreiben:
 
 Folgen Sie der Anleitung für einen reibungslosen Start:
 
-1. [Anlegen der Abendkasse im Backend](./backend-setup)
-2. [Aufbau und Konfiguration des Systems](./setup)
+1. [Anlegen der Abendkasse im Backend](./02-backend-setup.mdx)
+2. [Aufbau und Konfiguration des Systems](./03-setup.mdx)
    1. Mit Kartenzahlung (benötigt Dein-Ticket.Shop Abendkassensystem)
    2. Nur Barzahlung (auch mit eigenem Laptop + Bondrucker möglich)
-3. [Verkauf von Karten](./sale)
-4. [Scannen von Tickets / PDAs](./pda)
-5. [Nach der Veranstaltung](./after-event)
+3. [Verkauf von Karten](./04-sale.mdx)
+4. [Scannen von Tickets / PDAs](./05-pda.mdx)
+5. [Nach der Veranstaltung](./06-after-event.mdx)
